1.99.12

1.99.11
- P4A_Frame::clean() was added to reset anchored objects map
- PEAR::HTML_Template_Flexy was updated to 1.2.5
- PHP closing tag was removed from all files
- P4A_Widget::onKeyUp() was added
- P4A_Widget::onKeyDown() was added
- P4A_Data_Field::getSQLNewValue() was added for safe query
- P4A_Data_Field::getSQLValue() was added for safe query
- P4A_Field::getSQLNewValue() was added for safe query
- P4A_Field::getSQLValue() was added for safe query
- Keyboard keycode now is passed as param to P4A_Widget::onKeyUp(),onKeyDown(),onKeyPress() handlers
- getKeyPressed() was added to p4a.js
- onsubmit="return false" was added to p4a_mask form
- a bugfix on P4A_DB_Source::getNumRows() with group by was done
- some error checks were added to P4A_DB_Source::getNumRows()
- a bug on P4A_DB_Source::getFilters() was fixed
- P4A_DB_Source::rowByPk() was added to move a db source using the pk values
- error check was added to P4A_DB_Source::getPkRow()
- a bug in P4A_Number::unformat() with negative numbers was fixed (thanks to therealpecus)
- some code has been beautified

1.99.10
- TinyFCK was updated to 0.16 (TinyMCE 2.0.8)
- some TinyMCE options were changes to get better XHTML strict validation (align was removed)
- Bulgarian translation was added (thanks to Angel Grancharov)
- P4A_DB_Source::getAll always returns an array (fixing a bug on PEAR::MDB2)
- P4A_Table now goes to page one if current page is empty
- constant P4A_FIELD_CLASS was added so now you can extend P4A_Field and tell the system what field class to use
- apply icon was added (32x32)
- scriptaculous was update to 1.6.5

1.99.9 - Thank you to mechano (http://www.mechanicamente.it) for the second donation!
- window's title was added to sample applications
- strict validation bugfixes on P4A_Widget were done
- a typo in P4A_DB_Source::dropFilter() was fixed
- a bug with clone() function (php<5) was fixed

1.99.8 - Thank you to zukunft.com for the first donation!